--- a/DubboParent/pom.xml
+++ b/DubboParent/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>com.zhoujian</groupId>
     <artifactId>DubboParent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>api</module>
+        <module>provider</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
