--- a/DubboParent/pom.xml
+++ b/DubboParent/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>api</module>
         <module>provider</module>
+        <module>demoConsumer</module>
     </modules>
 
     <parent>
