--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>com.zhoujian</groupId>
     <artifactId>Parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>pojo</module>
+        <module>mapper</module>
+    </modules>
 
     <parent>
             <groupId>org.springframework.boot</groupId>
