--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>pojo</module>
         <module>mapper</module>
+        <module>api</module>
     </modules>
 
     <parent>
