#DubboLearn1# 课时17 课上案例-dept子项目的创建

--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -12,6 +12,8 @@
         <module>pojo</module>
         <module>mapper</module>
         <module>api</module>
+        <module>provider</module>
+        <module>dept</module>
     </modules>
 
     <parent>
