--- a/Parent/mapper/src/main/resources/application-mybatis.yml
+++ b/Parent/mapper/src/main/resources/application-mybatis.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost::3306/project_0901
+    url: jdbc:mysql://localhost:3306/project_0901?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
     password: root
 
