--- a/Parent/dept/src/main/resources/application.yml
+++ b/Parent/dept/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 dubbo:
   application:
-    name: dubbo-provider
+    name: dept-dubbo-consumer
   registry:
     address: zookeeper://172.31.176.1:2181
 
