--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -14,6 +14,7 @@
         <module>api</module>
         <module>provider</module>
         <module>dept</module>
+        <module>emp</module>
     </modules>
 
     <parent>
